# raylib-chopper

./: .gitignore  CMakeLists.txt  copy_assets.bat
assets/: Sprite-0001.aseprite
cmake/: warnings.cmake
src/: Actor.cpp  Actor.hpp  Animation.cpp  Animation.hpp  Component.cpp  Component.hpp  Entity.cpp  Entity.hpp  Game.cpp  Game.hpp  PlayerHeli.cpp  PlayerHeli.hpp  main.cpp
src/Units/: Player.cpp  Player.hpp  Unit.cpp  Unit.hpp
src/Utility/: AnimationManager.cpp  AnimationManager.hpp  Includes.hpp  Logger.hpp  SpriteManager.cpp  SpriteManager.hpp  Types.hpp
